--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.screen{
+  overflow: auto;
+  padding-bottom: 70px;
+}
+.editable{
+  cursor: crosshair;
+}
+img{
+  width:100%;
+   height:auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sticky-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background: #000;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.sticky-bar button {
+  padding: 0 20px;
+  font-size: 16px;
+  background: #444;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  margin: 0 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sticky-bar button code {
+  background: rgba(255, 255, 255, .2);
+  padding: 4px 7px;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+
+.sticky-bar button.active {
+  background: #e519a3;
 }
